@@ -118,6 +118,11 @@ characters and length. They:
   - should not exceed 255 bytes when encoded with ``utf-8`` (this
     limit applies on the optionally schema-qualified table name)
 
+Column names are restricted in terms of characters. They:
+
+  - may not contain one of the following characters: ``[`` ``'`` ``]``
+
+  - may not *start* with an underscore: ``_``
 
 Constraints
 ===========
